--- a/server/package.json
+++ b/server/package.json
@@ -26,5 +26,9 @@
     "nodemon": "^2.0.18",
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
+  },
+
+  "engines": {
+    "node": "14.x"
   }
 }
