--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "MISSION CONTROL API",
   "main": "server.js",
   "scripts": {
-    "start": "node build/server.js",
+    "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc"
   },
